# Copyright by The HDF Group. All rights reserved.

# This builds the BZIP2 example directory.

# Ed Hartnett 1/14/19

# Build example program and run it as a test.
check_PROGRAMS = h5ex_d_bzip2
TESTS = run_tests.sh

# Clean up HDF5 file created by example.
CLEANFILES = *.h5

EXTRA_DIST = run_tests.sh
